# corelib_rs

./: .gitignore  README.md
rust.binutils/: Cargo.toml
rust.binutils/src/: lib.rs
rust.config/: Cargo.toml
rust.config/src/: lib.rs
rust.gwevent/: Cargo.toml
rust.gwevent/src/: core.rs
rust.jobserver/: Cargo.toml
rust.jobserver/.sqlx/: query-0ac3c2488a52bcaff3c85f237513f051fd62600eaf88581871f6d81543250304.json  query-2669e49bd5a66b9116c261f6289316d1dfc392946dcf58e990249e09e6c6636d.json  query-65273f4d4f2d7d8891f7e14d951545cce8f70915709e9675f1c120417b0a8359.json
rust.jobserver/src/: embed.rs  lib.rs  poll.rs  spawn.rs
rust.limits/src/: lib.rs
rust.lockdowns/: Cargo.toml
rust.lockdowns/src/: lib.rs
rust.permissions/: Cargo.toml
rust.permissions.checks/: Cargo.toml
rust.permissions.checks/src/: lib.rs
rust.permissions/src/: lib.rs  parse.rs  types.rs
rust.rpc_server/: Cargo.toml
rust.rpc_server.bot/: Cargo.toml
rust.rpc_server.bot/src/: lib.rs  settings_execute.rs  templating_exec.rs  types.rs
rust.rpc_server/src/: lib.rs
rust.sandwich_driver/: Cargo.toml
rust.sandwich_driver/src/: lib.rs
rust.settings/: Cargo.toml
rust.settings/src/: cfg.rs  common_columns.rs  lib.rs  types.rs
rust.silverpelt/: Cargo.toml
rust.silverpelt/src/: ar_event.rs  cache.rs  canonical_module.rs  data.rs  lib.rs  lockdowns.rs  member_permission_calc.rs  module.rs  module_config.rs  objectstore.rs  pginterval.rs  punishments.rs  stings.rs  templates.rs  types.rs  userinfo.rs
rust.std/: Cargo.toml
rust.std/src/: lib.rs  objectstore.rs  serenity_backport.rs  utils.rs  value.rs
rust.templating/: Cargo.toml
rust.templating/src/lang_lua/plugins/: mod.rs
