[package]
name = "permission_checks"
description = "Permission checking for Anti-Raid modules."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
log = "0.4"

# Anti-Raid specific
splashcore_rs = { path = "../rust.std" }
permissions = { path = "../rust.permissions" }
sandwich_driver = { path = "../rust.sandwich_driver" }
silverpelt = { path = "../rust.silverpelt" }

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"
