[package]
name = "rust_rpc_server"
version = "6.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axum = "0.7.5"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tower-service = "0.3"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread", "fs"]
