[package]
name = "silverpelt"
description = "Silverpelt provides the core library used to produce Anti-Raid modules. In Warriors, Silverpelt represents the mortal plane and the stars that guide the clans."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.2"
indexmap = { version = "2", features = ["serde"] }
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
async-trait = "0.1.80"
uuid = { version = "1", features = ["serde", "v4"] }
extract_map = { version = "0.1.0", features = ["serde", "iter_mut"] }
strum = { version = "0.26", features = ["derive"] }
antiraid-types = { git = "https://github.com/Anti-Raid/antiraid-types" }
ar_settings = { git = "https://github.com/Anti-Raid/settings" }

# Anti-Raid specific
splashcore_rs = { path = "../rust.std" }
sandwich_driver = { path = "../rust.sandwich_driver" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

