[package]
name = "silverpelt"
description = "Silverpelt provides the core library used to produce Anti-Raid modules. In Warriors, Silverpelt represents the mortal plane and the stars that guide the clans."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
async-trait = "0.1.80"
uuid = { version = "1", features = ["serde", "v4"] }
antiraid-types = { git = "https://github.com/Anti-Raid/antiraid-types" }

# Anti-Raid specific
splashcore_rs = { path = "../rust.std" }
sandwich_driver = { path = "../rust.sandwich_driver" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

