[package]
name = "splashcore_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
indexmap = { version = "2", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
extract_map = { version = "0.1.0", features = ["serde", "iter_mut"] }
log = "0.4"
rand = "0.8"
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }

# AWS
aws-config = { version = "1" }
aws-sdk-s3 = { version = "1" }
aws-smithy-types = { version = "1" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]
